// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Input matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="c-dxhRnB c-dxhRnB-fEWyJT-size-md decaInput-root"
  >
    <label
      class="c-fdMnTA c-fdMnTA-cNhXCf-size-md decaInput-label"
      for="input-1"
    >
      Label Text
    </label>
    <div
      class="c-hQCSiP c-hQCSiP-fEWyJT-size-md c-hQCSiP-cycqzJ-pill-false c-hQCSiP-htQczz-cv decaInput-wrap"
    >
      <input
        class="c-dlVhqe c-dlVhqe-iTudIJ-size-md c-dlVhqe-cycqzJ-pill-false c-dlVhqe-fOmxiH-cv decaInput-input"
        id="input-1"
        placeholder="Placeholder Text"
        value=""
      />
    </div>
    <p
      class="c-bdULyd c-bdULyd-RRNal-state-default decaInput-helperText"
    >
      Helper Text
    </p>
  </div>
</DocumentFragment>
`;

exports[`components/Input renders all colors 1`] = `
<DocumentFragment>
  <div
    class="c-dxhRnB c-dxhRnB-fEWyJT-size-md decaInput-root"
  >
    <div
      class="c-hQCSiP c-hQCSiP-fEWyJT-size-md c-hQCSiP-cycqzJ-pill-false c-hQCSiP-htQczz-cv decaInput-wrap"
    >
      <input
        class="c-dlVhqe c-dlVhqe-iTudIJ-size-md c-dlVhqe-cycqzJ-pill-false c-dlVhqe-fOmxiH-cv decaInput-input"
        id="input-1"
        value=""
      />
    </div>
  </div>
  <div
    class="c-dxhRnB c-dxhRnB-fEWyJT-size-md decaInput-root"
  >
    <div
      class="c-hQCSiP c-hQCSiP-fEWyJT-size-md c-hQCSiP-cycqzJ-pill-false c-hQCSiP-htQczz-cv decaInput-wrap"
    >
      <input
        class="c-dlVhqe c-dlVhqe-iTudIJ-size-md c-dlVhqe-cycqzJ-pill-false c-dlVhqe-fOmxiH-cv decaInput-input"
        id="input-1"
        value=""
      />
    </div>
  </div>
  <div
    class="c-dxhRnB c-dxhRnB-fEWyJT-size-md decaInput-root"
  >
    <div
      class="c-hQCSiP c-hQCSiP-fEWyJT-size-md c-hQCSiP-cycqzJ-pill-false c-hQCSiP-htQczz-cv decaInput-wrap"
    >
      <input
        class="c-dlVhqe c-dlVhqe-iTudIJ-size-md c-dlVhqe-cycqzJ-pill-false c-dlVhqe-fOmxiH-cv decaInput-input"
        id="input-1"
        value=""
      />
    </div>
  </div>
  <div
    class="c-dxhRnB c-dxhRnB-fEWyJT-size-md decaInput-root"
  >
    <div
      class="c-hQCSiP c-hQCSiP-fEWyJT-size-md c-hQCSiP-cycqzJ-pill-false c-hQCSiP-htQczz-cv decaInput-wrap"
    >
      <input
        class="c-dlVhqe c-dlVhqe-iTudIJ-size-md c-dlVhqe-cycqzJ-pill-false c-dlVhqe-fOmxiH-cv decaInput-input"
        id="input-1"
        value=""
      />
    </div>
  </div>
  <div
    class="c-dxhRnB c-dxhRnB-fEWyJT-size-md decaInput-root"
  >
    <div
      class="c-hQCSiP c-hQCSiP-fEWyJT-size-md c-hQCSiP-cycqzJ-pill-false c-hQCSiP-htQczz-cv decaInput-wrap"
    >
      <input
        class="c-dlVhqe c-dlVhqe-iTudIJ-size-md c-dlVhqe-cycqzJ-pill-false c-dlVhqe-fOmxiH-cv decaInput-input"
        id="input-1"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`components/Input renders all sizes 1`] = `
<DocumentFragment>
  <div
    class="c-dxhRnB c-dxhRnB-dQgSKX-size-sm decaInput-root"
  >
    <div
      class="c-hQCSiP c-hQCSiP-dQgSKX-size-sm c-hQCSiP-cycqzJ-pill-false c-hQCSiP-htQczz-cv decaInput-wrap"
    >
      <input
        class="c-dlVhqe c-dlVhqe-kGUnSj-size-sm c-dlVhqe-cycqzJ-pill-false c-dlVhqe-fOmxiH-cv decaInput-input"
        id="input-1"
        value=""
      />
    </div>
  </div>
  <div
    class="c-dxhRnB c-dxhRnB-fEWyJT-size-md decaInput-root"
  >
    <div
      class="c-hQCSiP c-hQCSiP-fEWyJT-size-md c-hQCSiP-cycqzJ-pill-false c-hQCSiP-htQczz-cv decaInput-wrap"
    >
      <input
        class="c-dlVhqe c-dlVhqe-iTudIJ-size-md c-dlVhqe-cycqzJ-pill-false c-dlVhqe-fOmxiH-cv decaInput-input"
        id="input-1"
        value=""
      />
    </div>
  </div>
  <div
    class="c-dxhRnB c-dxhRnB-jeReyr-size-lg decaInput-root"
  >
    <div
      class="c-hQCSiP c-hQCSiP-jeReyr-size-lg c-hQCSiP-cycqzJ-pill-false c-hQCSiP-htQczz-cv decaInput-wrap"
    >
      <input
        class="c-dlVhqe c-dlVhqe-iTudIJ-size-lg c-dlVhqe-cycqzJ-pill-false c-dlVhqe-fOmxiH-cv decaInput-input"
        id="input-1"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`components/Input renders all variants 1`] = `
<DocumentFragment>
  <div
    class="c-dxhRnB c-dxhRnB-fEWyJT-size-md decaInput-root"
  >
    <div
      class="c-hQCSiP c-hQCSiP-fEWyJT-size-md c-hQCSiP-cycqzJ-pill-false c-hQCSiP-htQczz-cv decaInput-wrap"
    >
      <input
        class="c-dlVhqe c-dlVhqe-iTudIJ-size-md c-dlVhqe-cycqzJ-pill-false c-dlVhqe-fOmxiH-cv decaInput-input"
        id="input-1"
        value=""
      />
    </div>
  </div>
  <div
    class="c-dxhRnB c-dxhRnB-fEWyJT-size-md decaInput-root"
  >
    <div
      class="c-hQCSiP c-hQCSiP-fEWyJT-size-md c-hQCSiP-cycqzJ-pill-false c-hQCSiP-dBEtCv-cv decaInput-wrap"
    >
      <input
        class="c-dlVhqe c-dlVhqe-iTudIJ-size-md c-dlVhqe-cycqzJ-pill-false decaInput-input"
        id="input-1"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;
